Work on manual to wiki conversion